# DE_Individual_Project_Two

./: Makefile  README.md
.github/workflows/: python_workflow.yml  rust_workflow.yml
Misc/: extract.rs  lib.rs  main
python_code/: Test_Log.md  main.py  test_main.py
python_code/my_lib/: transform.py  util.py
rust_sqlite_cli/: Cargo.toml  Test_Log.md  air_quality.db
rust_sqlite_cli/src/: main.rs
rust_sqlite_cli/src/my_lib/: crud.rs  extract.rs  mod.rs  transform.rs  util.rs
rust_sqlite_cli/tests/: integration_test.rs
speed_test_data/: Speed_Test_Result.md  python_air_quality.db  rust_air_quality.db
