[package]
name = "rust_sqlite_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
rusqlite = "0.32.1"
serde = "1.0.214"
serde_json = "1.0.132"
maplit = "1.0.2"
chrono = "0.4"